# itaos_kloader

./: .gitignore  TODO.txt  a20gate.c  convert.c  diskembed.sh.in  gdt.c  gdt.h  idt.c  kload_main.c  klstart.S  llscript.ld  mbrblock.S  memutils.c  meson.build  meson_cross.txt  meson_options.txt  printf.c  rmsr.c  rmsr_impl.S  terminal_driver.c
include/: a20gate.h  convert.h  gdt.h  idt.h  lowlevel.h  memutils.h  printf.h  rmsr.h  terminal_driver.h
